@@ -1,5 +1,6 @@
 09/01/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.4.3 'Marshal West':
+	- Redis DB user key database operation fixed.
 	- SHA-256 memory leak fixed.
 	- Mobility ticket retransmission fixed.
 	
